Updated Contact & Home page media queries, to prevent image stretching on mobile devices

--- a/styles.css
+++ b/styles.css
@@ -53,7 +53,6 @@ nav a {
     font-size: 1.25em;
 }
 
-
 /* HEADER MEDIA QUERIES */
 
 @media (max-width: 1200px) {
@@ -64,7 +63,17 @@ nav a {
     nav a {
         min-width: 70px;
         min-height: auto;
+        font-size: 18px;
     }
+
+    h1 {
+        font-size: 24px;
+    }
+
+    h2 {
+        font-size: 20px;
+    }
+
 }
 
 /* FOOTER */
@@ -183,6 +192,14 @@ footer {
         width: 100%;
     }
 
+    .skills-boxes {
+         width: 250px;
+         height: 250px;
+         margin: 2px;
+         border: 2px solid #ffffff;
+         background-color: lightgrey;
+         position: relative;
+     }
 }
 
 /* CONTACT PAGE CONTENT */
@@ -212,8 +229,8 @@ footer {
 
 #about-me-content img {
     display: flex;
-    width: 100%;
     height: 100%;
+    width: 100%;
 }
 
 #about-me-content p {
@@ -311,7 +328,7 @@ form {
 /* CONTACT PAGE MEDIA QUERIES */
 
 
-@media (max-width: 1200px) {
+@media (max-width: 500px) {
     #contact-page {
         flex-direction: column;
         padding: 5%;
@@ -332,12 +349,49 @@ form {
 
     .form-item label {
         width: 50px;
-        font-size: 16px;
+        font-size: 14px;
+    }
+
+    .form-item button {
+        font-size: 14px;
     }
 
     .form-item input,
     .form-item textarea {
         flex-basis: 100%;
+    }
+
+    #about-me-content {
+        display: flex;
+        flex-wrap: wrap;
+        padding: 2px;
+        position: relative;
+    }
+
+    #about-me-content img {
+        width: 250px;
+    }
+
+    #linkedin-overlay {
+        display: flex; 
+        width: 75%;
+        justify-content: center;
+        padding-top: 10px;
+        padding-bottom: 10px;
+        position: absolute;
+        bottom: 3.5em;
+        font-size: 16px;
+    }
+    
+    #github-overlay {
+        display: flex; 
+        width: 75%;
+        justify-content: center;
+        padding-top: 10px;
+        padding-bottom: 10px;
+        position: absolute;
+        bottom: 0.25em;
+        font-size: 16px;
     }
 
 }
